# ManRead

./: .gitignore  .gitmodules  Cargo.toml  README.md  download.sh  install.sh  run_app.sh  run_db.sh  run_server.sh
crates/api/: Cargo.toml  config.yml
crates/api/src/: error.rs  main.rs
crates/api/src/errors/: mod.rs  poison.rs  scrape.rs
crates/api/src/init/: app_data.rs  background.rs  cors.rs  data.rs  db.rs  env.rs  logger.rs  mod.rs  server.rs
crates/api/src/models/: mod.rs
crates/api/src/models/surreal/: auth.rs  chapter.rs  kind.rs  lists.rs  logs.rs  manga.rs  mod.rs  page.rs  progress.rs  scraper.rs  tag.rs  user.rs  version.rs  version_link.rs
crates/api/src/routes/: mod.rs
crates/api/src/routes/admin/: mod.rs
crates/api/src/routes/admin/verify/: create.rs  delete.rs  list.rs  mod.rs
crates/api/src/routes/auth/: create.rs  login.rs  logout.rs  mod.rs  refresh.rs  reset_password.rs  verify.rs  verify_reset_password.rs
crates/api/src/routes/chapter/: add.rs  delete.rs  edit.rs  info.rs  mod.rs  save_progress.rs
crates/api/src/routes/chapter_versions/: delete.rs  edit.rs  info.rs  list.rs  mod.rs
crates/api/src/routes/errors/: delete.rs  list.rs  mod.rs
crates/api/src/routes/image/: cover.rs  cover_img.rs  mod.rs  multipart.rs  page.rs  page_image.rs  page_translation.rs  save.rs  upload.rs
crates/api/src/routes/kind/: list.rs  mod.rs
crates/api/src/routes/lists/: add.rs  delete.rs  list.rs  mod.rs
crates/api/src/routes/lists/namespace/: add.rs  delete.rs  mod.rs
crates/api/src/routes/manga/: cover.rs  external.rs  home.rs  info.rs  kinds.rs  mod.rs  reader.rs  search.rs  tags.rs
crates/api/src/routes/manga/detail/: create.rs  delete.rs  edit.rs  info.rs  mod.rs
crates/api/src/routes/tags/: mod.rs  search.rs
crates/api/src/routes/user/: activate.rs  delete.rs  edit.rs  info.rs  list.rs  mod.rs  refresh.rs  reset_password.rs  search.rs  sign_in.rs  sign_up.rs
crates/api/src/services/: achievement.rs  auth.rs  auth_service.rs  crypto_service.rs  file.rs  mod.rs  scraper.rs
crates/api/src/services/db/: auth_tokens.rs  chapter.rs  manga.rs  manga_kind.rs  manga_list.rs  page.rs  scrape_account.rs  scrape_list.rs  tag.rs  user.rs  version.rs
crates/api/src/services/internal/: mod.rs
crates/api/src/util/: file.rs
crates/api/tools/: add_hash.rs
crates/apiv2/: Cargo.toml
crates/apiv2/src/: error.rs  main.rs
crates/apiv2/src/actions/: auth.rs  chapter.rs  chapter_version.rs  character.rs  crytpo.rs  kind.rs  lists.rs  manga.rs  mod.rs  reader.rs  tags.rs  tests.rs  token.rs  user.rs
crates/apiv2/src/init/: app_data.rs  env.rs  https.rs  logger.rs  mod.rs  server.rs
crates/apiv2/src/routes/: admin.rs  auth.rs  chapter.rs  chapter_versions.rs  character.rs  kind.rs  lists.rs  manga.rs  mod.rs  reader.rs  tags.rs  token.rs  user.rs
crates/apiv2/src/routes/image/: cover.rs  cover_img.rs  mod.rs  page_image.rs  stream.rs  upload.rs
crates/apiv2/src/routes/img/: cover.rs  export.rs  mod.rs  upload.rs
crates/app/: Cargo.toml
crates/app/src/: app.rs  fetcher.rs  fonts.rs  main.rs  requests.rs  window_storage.rs
crates/app/src/data/: image.rs  shared_data.rs  user.rs
crates/app/src/pages/: home.rs  info.rs  loading_init_refres.rs  mod.rs  playground.rs  reader.rs  search.rs
crates/app/src/pages/add/: manga.rs  mod.rs
crates/app/src/pages/auth/: mod.rs  reset_password.rs  sign_in.rs  sign_up.rs  sign_up_info.rs  verify_account.rs
crates/app/src/util/: mod.rs  new_parser.rs  parser.rs
crates/app/src/widgets/: hover_brackground.rs  image_overlay.rs  mod.rs  or_continue_with.rs  three_dots.rs
crates/app/src/widgets/add/: group.rs  mod.rs  suggestionbox.rs  tag_fied.rs  tag_suggestion_box.rs
crates/app/src/widgets/reader/: scroll.rs
crates/app/src/widgets/reader/load/: mod.rs  multi.rs  single.rs
crates/app/src/widgets/reader/overlay/: calculate_size.rs
crates/app/src/widgets/reader/render/: helper.rs  mod.rs  overlay.rs
crates/app/src/widgets/reader/settings/: mod.rs  reader.rs  view.rs
crates/app/src/widgets/reader/storage/: image.rs  manga.rs  mod.rs
crates/db/: Cargo.toml
crates/db/src/: auth.rs  chapter.rs  character.rs  error.rs  kind.rs  kv.rs  lib.rs  lists.rs  logs.rs  manga.rs  page.rs  progress.rs  scraper.rs  tag.rs  user.rs  version.rs  version_link.rs
crates/manga-scraper/: Cargo.toml  README.md
crates/manga-scraper/src/: error.rs  lib.rs
crates/manga-scraper/src/init/: load_dyn.rs  mod.rs  scraper.rs
crates/manga-scraper/src/init/parse/: metadata.rs  mod.rs  register.rs  scraper.rs  search.rs  selectors.rs
crates/manga-scraper/src/processors/: mod.rs
crates/manga-scraper/src/processors/post/: add_base.rs  array_to_map.rs  filter_duplicates.rs  filter_empty.rs  flatten.rs  join.rs  json.rs  json_display.rs  json_flatten.rs  json_string_string.rs  json_take.rs  mod.rs  next_image.rs  prefix_key.rs  remove_attr.rs  remove_attrs.rs  split.rs  strip.rs  strip_string.rs
crates/manga-scraper/src/processors/pre/: asura.rs  mod.rs
crates/manga-scraper/src/runtime/: fetch.rs  files.rs  metadata.rs  mod.rs  search.rs  selector.rs
crates/manga-scraper/tests/: metadata.rs  parser.rs  parser.txt  register.rs  scraper.rs  search.rs
crates/scraper-module/: Cargo.toml
crates/scraper-module/src/: lib.rs  req.rs
crates/search-parser/: Cargo.toml
crates/search-parser/src/: display.rs  lib.rs  shape.rs  to_json.rs
crates/storage/: Cargo.toml  DEV_DOCS.md
crates/storage/scripts/: build_export_from_folder.py  encode_bundles.py  export_to_folder.py
crates/storage/src/: builders.rs  error.rs  lib.rs  temp.rs
crates/storage/src/backends/: aes_gcm.rs  cache.rs  content_length.rs  delay.rs  disk.rs  key_value.rs  key_value_memory.rs  memory.rs  mod.rs  s3.rs
crates/storage/src/workers/: containers.rs  media.rs  mod.rs
crates/translator/: Cargo.toml
crates/translator/src/: lib.rs
frontend/: Dockerfile  app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwindcss.config.js  tsconfig.json
ui/: nuxt.config.ts  package.json  tailwind.config.ts
util/: multipart.html
(+260 files in other folders)
