[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/app",
    "crates/api_structure",
    "crates/scraper",
    "crates/translator", "crates/proc_macros"]

exclude = ["crates/dyn/surrealdb-dynamic", "crates/dyn/surrealdb-extras-dynamic"]
[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
proc-macros = {path = "crates/proc_macros"}
api_structure = {path = "crates/api_structure"}
manread_scraper = { path = "crates/scraper" }
scraper = "0.20.0"
walkdir = "2.5.0"
serde = {version = "1.0.209", features = ["derive"] }
log = { version = "0.4.22", features = ["std"] }
rand = "0.9.0-alpha.2"
tokio = { version = "1.39.3", features = ["full"] }
fern = "0.6.2"
humantime = "2.1.0"
nanoid = "0.4.0"
serde_yaml = "0.9.34-deprecated"
futures-util = "0.3.30"
serde_json = "1.0.127"
bcrypt = "0.15.1"
async-recursion = "1.1.1"
url = "2.5.2"
chrono = "0.4.38"
image = { version = "0.25.2", features = ["jpeg", "gif", "qoi"] }
reqwest = {version = "0.12.7", features = ["json", "stream", "multipart", "native-tls-alpn"] }
base64 = "0.22.1"
poll-promise = "0.3"
keyring = "3.2.0"
rfd = "0.14"
regex = "1.10.6"
identicon-rs = "6.0.0"
pg-embed = "0.7.1"
tokio-postgres = "0.7.11"
openssl = "0.10.66"
bytes = "1.7.1"
futures = "0.3.30"
urlencoding = "2.1.3"
curl = "0.4.46"

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]
egui = { git = "https://github.com/emilk/egui", branch = "master" }
egui_extras = { git = "https://github.com/emilk/egui", branch = "master" }
eframe = { git = "https://github.com/emilk/egui", branch = "master" }
identicon-rs = { git = "https://github.com/conways-glider/identicon-rs", branch = "main" }
