[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/api_structure",
    "crates/event-runner",
    "crates/manga-scraper",
    "crates/scrape-modules/*",
    "crates/scraper-module",
    "crates/scraper-testing",
    "crates/search-parser",
]

exclude = ["frontend"]
[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
api_structure = { path = "crates/api_structure" }
manga-scraper = { path = "crates/manga-scraper" }
scraper-testing = { path = "crates/scraper-testing" }
event-runner = { path = "crates/event-runner" }

scraper = { version = "0.25" }
scraper-module = { path = "crates/scraper-module" }
regex = "1.12"
# shared
url = "2"
serde_json = "1"
chrono = "0.4"
schemars = { package = "apistos-schemars", version = "0.8" }
apistos = "0.6"
tokio = "1.48"
async-trait = "0.1"

### backend
actix-web = "4"                                               #framework
actix-cors = "0.7"                                            # cors
actix-files = "0.6"
actix-multipart = "0.7.2"
futures-util = "0.3"
tokio-util = "0.7"
futures = "0.3.31"
openssl = "0.10"                                              # https
image = "0.25"                                                # image
img_hash = { git = "https://github.com/ManReadApp/img_hash" }
base64 = "0.22.1"
# logger
fern = "0.7"
log = "0.4"
humantime = "2"
#jwt
jsonwebtoken = "9.3"
bcrypt = "0.17.0"
actix-web-grants = "4.1"
actix-web-httpauth = "0.8"
reqwest = { version = "0.12", features = ["json"] }


# config
toml = "0.8"
rand = "0.9" # generate unique id in config


local-ip-address = "0.6" # logging

# shared
dashmap = "6.1.0"

serde = "1"
anyhow = "1.0"
urlencoding = { version = "2.1" }

[patch.crates-io]
serde = { git = "https://github.com/frederik-uni/serde" }
serde-content = { git = "https://github.com/frederik-uni/serde-content" }

[profile.dev.package.image]
opt-level = 3
