[package]
name = "api"
edition.workspace = true
version.workspace = true

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
async-trait = { workspace = true }
serde_json = { workspace = true }
actix-web = { workspace = true }
actix-cors = { workspace = true, optional = true }
actix-multipart = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
fern = { workspace = true, features = ["colored"] }
humantime = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rand = { workspace = true }
toml = { workspace = true }
openssl = { workspace = true, optional = true }
local-ip-address = { workspace = true, optional = true }
image = { workspace = true }
img_hash = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
scraper = { workspace = true }
surrealdb = { version = "2", optional = true }
surrealdb-extras = { version = "2.0.10", optional = true }
manga-scraper = { workspace = true }
scraper-module = { workspace = true, features = ["openapi"] }
event-runner = { workspace = true }
api_structure = { workspace = true }
actix-files = { workspace = true }
actix-web-grants = { workspace = true }
actix-web-httpauth = { workspace = true }

# auth
bcrypt = { workspace = true }
jsonwebtoken = { workspace = true }
# api docs
schemars = { workspace = true }
apistos = { workspace = true, features = [
    "swagger-ui",
    "rapidoc",
    "redoc",
    "scalar",
    "multipart",
    "actix-web-grants",
] }

[features]
default = ["cors", "cors-permissive", "db"]
log-ip = ["dep:local-ip-address"]
https = ["dep:openssl"]
cors = ["dep:actix-cors"]
content-type-from-filename = []
cors-permissive = []
# this is a debug feature whihc will build the project without a database. the code wont work but working on everything else will be faster without the 300 extra dependencies
db = ["dep:surrealdb", "dep:surrealdb-extras"]

[profile.dev.package.image]
opt-level = 3
