[package]
name = "apiv2"
edition.workspace = true
version.workspace = true

[dependencies]
export.workspace = true
actix-web = { workspace = true }
serde = { workspace = true, features = ["derive"] }
log = { workspace = true }
rand = { workspace = true }
toml.workspace = true
fern = { workspace = true, features = ["colored"] }
helper.workspace = true
humantime.workspace = true
storage = { workspace = true, features = ["s3"] }
db.workspace = true
actix-web-httpauth.workspace = true
actix-web-grants.workspace = true
bcrypt.workspace = true
tokio = { workspace = true, features = ["io-std"] }
jsonwebtoken.workspace = true
api_structure.workspace = true
chrono.workspace = true
infer.workspace = true
apistos = { workspace = true, features = [
    "swagger-ui",
    "rapidoc",
    "redoc",
    "scalar",
    "multipart",
    "actix-web-grants",
] }
futures-util.workspace = true
actix-multipart.workspace = true
bytes.workspace = true
openssl = { workspace = true, optional = true }
actix-cors = { workspace = true, optional = true }

local-ip-address = { workspace = true, optional = true }

[features]
default = ["log-ip", "cors", "cors-permissive"]
log-ip = ["dep:local-ip-address"]
https = ["dep:openssl"]
cors = ["dep:actix-cors"]
cors-permissive = ["cors"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-util"] }
