[package]
name = "manread"
edition.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macros = { workspace = true }
egui = { version = "0.28", features = ["serde"]}
eframe = { version = "0.28", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow", # Use the glow rendering backend. Alternative: "wgpu".
    "persistence", # Enable restoring app state when restarting the app.
] }
ethread = { path = "../../ethread" }

log = {workspace = true}
serde = { workspace = true, features = ["derive"] }
api_structure = { workspace = true }
image = { version = "0.25", features = ["jpeg", "gif", "qoi", "png"] }

#fetching
serde_json = {workspace = true}
url = {workspace = true}
reqwest = {workspace = true, features = ["json", "stream", "multipart"] }
base64 = {workspace = true}
poll-promise = "0.3"
keyring = "3.2"
egui_extras = { version = "0.28", features = ["all_loaders", "datepicker"] }
rfd = "0.14"
paste = "1.0.15"

# auth
regex = {workspace = true}
identicon-rs = {workspace = true}

#
chrono = {workspace = true}
futures-util = { workspace = true }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fern = { workspace = true, features = ["colored"] }
humantime = {workspace = true}
tokio = {workspace = true, features = ["rt", "rt-multi-thread", "sync", "macros"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ['console'] }
tokio = { workspace = true, features = ["sync"] }


[features]
default = ["dev"]
dev = []
