[package]
name = "db"
edition.workspace = true
version.workspace = true

[dependencies]
surrealdb.workspace = true
api_structure.workspace = true
surrealdb-extras.workspace = true
serde = { workspace = true, features = ["derive"] }
chrono.workspace = true
helper.workspace = true
scraper-module = { workspace = true, features = ["json"] }
storage.workspace = true
