[package]
name = "search-parser"
edition.workspace = true
version.workspace = true
[profile.release]
lto = true

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
wasm-bindgen = "0.2"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }
cfg-if = "1.0.0"

[dev-dependencies]

[features]
default = ["wee_alloc", "console_error_panic_hook"]
