[package]
name = "storage"
edition.workspace = true
version.workspace = true

[dependencies]
rand.workspace = true
log.workspace = true
infer.workspace = true
image.workspace = true
async-tempfile.workspace = true
uuid = { workspace = true, features = ["v4"] }
async-trait.workspace = true
bytes.workspace = true
futures-core.workspace = true
mime.workspace = true
futures-util.workspace = true
thiserror = "2"
bincode = "1"
serde = { workspace = true, features = ["derive"] }
tokio-util = { workspace = true, features = ["io"] }
dashmap = "6"
mime_guess.workspace = true

tokio = { workspace = true, features = ["io-util", "time", "fs"] }
aes-gcm = { workspace = true, optional = true }
pin-project-lite = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = [
    "io-util",
    "time",
    "macros",
    "rt-multi-thread",
] }


[features]
default = ["disk", "encode"]
encode = ["dep:aes-gcm", "dep:pin-project-lite"]
disk = ["tokio/fs"]
