[package]
name = "translator"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { workspace = true, features = ["json"] }
base64 =  {workspace = true}
serde = { workspace = true, features = ["derive"] }
serde_json = {workspace = true}

[dev-dependencies]
tokio = { workspace = true, default-features = false, features = ["test-util", "rt-multi-thread", "macros"] }
